Completed preprocessing, added positional index algorithm